--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/img/tool-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Macro Tool</title>
+    <title>Micro Tools</title>
   </head>
   <body>
     <div id="app"></div>
